--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,7 +15,14 @@
   "author": "Muhamma Zakir Ramadhan",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "node": "^15.7.0",
+    "nodemon": "^2.0.7",
+    "npm": "^7.5.2",
+    "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^3.1.1",
     "whatsapp-web.js": "^1.12.1"
   }
 }
