--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "http": "0.0.1-security",
     "node": "^15.7.0",
     "nodemon": "^2.0.7",
