--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server WhatsApp Api By Muhammad Zakir Ramadhan",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +15,9 @@
   "author": "Muhamma Zakir Ramadhan",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.9.2",
     "http": "0.0.1-security",
     "node": "^15.7.0",
