--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server WhatsApp Api By Muhammad Zakir Ramadhan",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
